# Chess

./: .gitignore  CMakeLists.txt  bitboard.h  board.cpp  board.h  chess.h  chesstypes.h  engine.cpp  engine.h  fen.h  main.cpp  move.cpp  move.h  square.h  zobrist.h
unittests/: CMakeLists.txt  basicMoveTest.cpp  bishop.cpp  chessunittests.cpp  evaluateTest.cpp  fen.cpp  king.cpp  pawn.cpp  queen.cpp  rook.cpp  utils.cpp  utils.h
